# vm_translator

./: CMakeLists.txt  README.md  lang.txt  main.cpp
CodeWriter/: CodeWriter.cpp  CodeWriter.h
Misc/: reference.h
Parser/: Parser.cpp  Parser.h
VMTranslator/: VMTranslator.cpp  VMTranslator.h
